# whisper-subtitles

./: .gitignore  README.md  plan.md  pyproject.toml
generated-srt/: test.iter1.srt  test_dilan.srt  test_dilan_vad.srt  test_karaoke.srt  test_social.srt  test_traditional.srt
scripts/: setup.sh
src/whisper_subtitles/: __main__.py  audio.py  chunker.py  cli.py  presets.py  srt.py  transcribe.py
